--- a/src/shared/style/index.css
+++ b/src/shared/style/index.css
@@ -11,3 +11,11 @@
     padding-right: 12px;
 }
 
+.scrollbar-hidden {
+  -ms-overflow-style: none;
+  scrollbar-width: none;     
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
